--- a/webServer/package.json
+++ b/webServer/package.json
@@ -4,6 +4,7 @@
   "description": "Web Server Code for web interface for DSO plot",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,5 +12,9 @@
     "url": "https://github.com/relientm96/espDSO"
   },
   "author": "Matthew Yong",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
