--- a/webServer/package.json
+++ b/webServer/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mathjs": "^6.2.3"
   }
 }
